feat: Implement production-ready Clerk webhook handler with idempotency
✨ Features:
- Automatic 20 credit allocation on user signup
- Transaction record creation for audit trail
- Idempotency protection prevents double-crediting
- Atomic database transactions with automatic rollback
- Comprehensive error handling and logging

🗄️ Database Changes:
- Added WebhookEvent model for idempotency tracking
- Enhanced User model with timestamps
- Enhanced Transaction model with reason and webhookEventId
- Database migration ready to apply

🧪 Testing:
- Unit tests with 12 test cases (mocked dependencies)
- Integration tests with 4 test cases (real database)
- Jest configuration and setup
- 80%+ code coverage target

📚 Documentation:
- Complete implementation guide
- Quick reference for commands and queries
- Visual flow diagrams
- Test documentation
- Deployment instructions

🔧 Infrastructure:
- Updated .gitignore for better artifact exclusion
- Added test scripts to package.json
- Jest configuration for testing environment

This implementation is production-ready and includes comprehensive
idempotency protection, atomic transactions, and full test coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # testing
 /coverage
+jest-results.json
+.jest-cache
 
 # next.js
 /.next/
@@ -19,6 +21,18 @@
 # misc
 .DS_Store
 *.pem
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store?
+ehthumbs.db
 
 # debug
 npm-debug.log*
@@ -28,6 +42,14 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env.test
+.env.production
+
+# Sensitive files
+*.key
+*.pem
+*.p12
+*.pfx
 
 # vercel
 .vercel
