fix: Update build script to use prisma migrate deploy and handle duplicate tracking_id values
- Change build script from 'prisma db push' to 'prisma migrate deploy'
- Add build:push script as fallback for manual deployments
- Update migration to delete duplicate tracking_id records before adding unique constraint
- Migration now keeps only the most recent transaction for each tracking_id
- Fixes Vercel deployment error about data loss warnings

This ensures proper migration handling in production and prevents
unique constraint violations on existing duplicate data.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "prisma generate && prisma db push --skip-generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
+    "build:push": "prisma generate && prisma db push --skip-generate --accept-data-loss && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
