--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "build:push": "prisma generate && prisma db push --skip-generate --accept-data-loss && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci --coverage",
     "test:unit": "jest --testPathPattern=__tests__/(?!integration)",
     "test:integration": "jest --testPathPattern=__tests__/integration",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:generate": "prisma generate"
+    "db:setup": "npx tsx scripts/setup-database.ts"
   },
   "dependencies": {
     "@bytescale/upload-widget-react": "^4.19.0",
@@ -57,6 +55,7 @@
     "nextjs-toploader": "^1.6.12",
     "nodemailer": "^6.10.1",
     "openai": "^4.51.0",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^18",
@@ -74,13 +73,13 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@prisma/client": "^5.22.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/formidable": "^3.4.5",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -90,7 +89,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.22.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
