fix: Increase DB connection timeout, add webhook debug logging, and comprehensive diagnostic tools
- Increase database connection timeout from 10s to 30s for Neon serverless
- Add query_timeout (60s), statement_timeout (60s), and keepAlive settings
- Add RAW body logging to Networx webhook handler for better debugging
- Add comprehensive diagnostic tools: test-clerk-webhook.ts, verify-webhook-production.ts
- Add enhanced webhook handler with detailed logging and health checks
- Fix database setup script to load .env.local properly
- Add extensive documentation: setup guides, troubleshooting, diagnostic reports
- Add npm scripts for webhook testing: webhook:test, webhook:verify, webhook:health

Issues identified (require user action in Vercel):
- WEBHOOK_SECRET must match Clerk Signing Secret (signature verification failing)
- NETWORX_WEBHOOK_URL must point to /api/webhooks/networx (not /payment/success)
- NETWORX_RETURN_URL should use www.nerbixa.com (not preview URL)

See WEBHOOK_COMPLETE_FIX_SUMMARY.md for full details and action items.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:ci": "jest --ci --coverage",
     "test:unit": "jest --testPathPattern=__tests__/(?!integration)",
     "test:integration": "jest --testPathPattern=__tests__/integration",
-    "db:setup": "npx tsx scripts/setup-database.ts"
+    "db:setup": "npx tsx scripts/setup-database.ts",
+    "webhook:test": "npx tsx scripts/test-clerk-webhook.ts",
+    "webhook:verify": "npx tsx scripts/verify-webhook-production.ts",
+    "webhook:curl": "./scripts/test-webhook-curl.sh GET",
+    "webhook:health": "curl http://localhost:3000/api/webhooks/clerk",
+    "user:create": "node create-vladimir-user.js"
   },
   "dependencies": {
     "@bytescale/upload-widget-react": "^4.19.0",
