feat: complete nerbixa codebase with enhanced .gitignore and website-1 configuration
- Updated .gitignore with comprehensive artifact exclusions
- Configured repository to use only website-1 (github.com/vanya-vasya/website-1)
- Removed website-2 remote to enforce single repository policy
- Complete production-ready codebase with all fixes and features

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,37 @@ _backup/
 test-results/
 playwright-report/
 test-results.xml
+
+# Lock files (optional - keep only one)
+# yarn.lock
+# pnpm-lock.yaml
+
+# Debug
+.pnp.*
+.yarn/*
+
+# Sentry
+.sentryclirc
+
+# Local History
+.history/
+
+# Turbo
+.turbo
+
+# Production
+*.production
+
+# MacOS
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# JetBrains
+*.iml
+.idea/
+
+# Misc
+*.pem
+*.key
+!public/**/*.key
