feat: add comprehensive git configuration and enforcement tools
- Add audit-git-remotes.sh: automated remote verification and enforcement
- Add install-git-hooks.sh: pre-push hook installation for policy enforcement
- Add GIT_CONFIGURATION.md: complete documentation of git policy
- Add QUICK_START_GIT.md: quick reference for developers
- Update package.json: add repository metadata pointing to website-1
- Configure pre-push hooks to block unauthorized remotes
- Implement automated audit system for continuous compliance

Security measures:
- Pre-push hooks block pushes to non-website-1 remotes
- Audit script detects and fixes configuration issues
- Documentation provides clear guidelines for all developers
- CI/CD remains configured for website-1 only

--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "nerbixa",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vanya-vasya/website-1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vanya-vasya/website-1/issues"
+  },
+  "homepage": "https://github.com/vanya-vasya/website-1#readme",
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
