--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "regions": ["iad1"],
   "framework": "nextjs",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "functions": {
+    "app/**/*.{js,ts,tsx}": {
+      "maxDuration": 300
+    },
+    "api/**/*.{js,ts,tsx}": {
+      "maxDuration": 300
+    }
+  }
 }
