--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide-react": "^0.293.0",
     "next": "^14.2.4",
     "next-cloudinary": "^6.10.0",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^1.6.12",
     "nodemailer": "^6.10.1",
