fix: Use www subdomain for webhook URL to prevent 307 redirect
ROOT CAUSE: Payment provider webhooks sent to nerbixa.com were getting
307 redirected to www.nerbixa.com, which caused POST body to be lost.

CHANGES:
- Update default webhook/return URLs to use www.nerbixa.com
- Add backfill script for missing payment transactions
- Configure webhook routes in vercel.json for proper handling

This fixes payments not appearing in Payment History despite being
successful in the payment gateway.

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,26 @@
   "functions": {
     "app/**/*.{js,ts,tsx}": {
       "maxDuration": 300
+    },
+    "app/api/webhooks/**/*.{js,ts}": {
+      "maxDuration": 60
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/webhooks/:path*",
+      "destination": "/api/webhooks/:path*"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/webhooks/:path*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, no-cache, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
